--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -1,27 +1,34 @@
-.home{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 160px;
-    animation: navFadeIn 2s linear;
-    &__container{
-        width: auto;
-        text-align: center;
-    }
+.home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 100px;
+  animation: navFadeIn 2s linear;
+  width: auto;
+  height: 100vh;
+
+  &__container {
+    width: auto;
+    height: 100vh;
+    text-align: center;
+  }
 }
-.valid-button{
-    @include validButton;
-    display: inline-block;
-    margin-top: 30px;
-    margin-right: 30px;
+
+.valid-button {
+  @include validButton;
+  display: inline-block;
+  margin-top: 30px;
+  margin-right: 30px;
 }
-.cancel-button{
-    @include cancelButton;
-    display: inline-block;
-    margin-right: 30px;
+
+.cancel-button {
+  @include cancelButton;
+  display: inline-block;
+  margin-right: 30px;
 }
-.link-button{
-    @include linkButton;
-    display: inline-block;
+
+.link-button {
+  @include linkButton;
+  display: inline-block;
 }
